# procVid

./: .gitignore  README.md  lab2.cpp
lab1/: lab1.html
lab1/Parte2 A/: DisplayImage  DisplayImage.cpp
lab1/Parte2 B/img_write_from_webcam/: CMakeLists.txt  Makefile  img_write_from_webcam.cpp  img_write_wc
lab1/Parte2 B/video_read_from_file/: video_read  video_read_from_file.cpp
lab1/Parte2 B/video_read_from_image_sequence/: video_read_from_image_sequence.cpp  video_read_is
lab1/Parte2 B/video_read_from_webcam/: video_read_wc
lab1/Parte2 B/video_write_from_webcam/: video_write_wc
lab1/Parte2 B/video_write_to_file/: video_write_f
lab2/: CMakeLists.txt  Lab2  Makefile  lab2.cpp  resultados.pt1
lab2/.cache/clangd/index/: lab2.cpp.CFBC60FF87046F6D.idx
web/: extras.html  index.html  relatorios.html  style.css  trabalhos.html
week1/: lab00_Marina.html  style.css
